# DiffDrivePWM-ROS2-MotorController

./: .gitignore  README.md  frames_2024-09-27_22.16.32.gv
src/battery_monitor/: package.xml  setup.py
src/battery_monitor/battery_monitor/: battery_monitor_node.py
src/battery_monitor/launch/: battery_monitor_launch.py
src/bno055/bno055/params/: bno055_params_i2c.yaml
src/bno055/plutone/: FETCH_HEAD  config  index  packed-refs
src/bno055/plutone/logs/: HEAD
src/bno055/plutone/objects/pack/: pack-16915ff6b7b8b14b10b8c97c77aba3bdedb9e98b.idx  pack-16915ff6b7b8b14b10b8c97c77aba3bdedb9e98b.pack
src/bno055/plutone/refs/heads/: main
src/bno085/bno085/: BNO085_pub.py
src/f249/: CMakeLists.txt  package.xml
src/f249/include/f249/: f249driver.h
src/f249/launch/: f249driver_launch.py
src/f249/params/: f249.yaml  f249_left.yaml
src/f249/src/: f249driver.cpp
src/ina219/: CMakeLists.txt  package.xml
src/ina219/src/ina219/: launch_ina219.py  my_ina219.py
src/motor_controller/: CMakeLists.txt  motor_controller_node.cpp  motor_controller_node.hpp  package.xml
src/motor_pid/: CMakeLists.txt  motor_pid_node.cpp  motor_pid_node.hpp  package.xml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: cartographer_config.lua  nav2_params.yaml  slam_toolbox_params.yaml
src/rover_description/launch/: carto_nav2_launch.py  cartographer_launch.py  lidar_only.py  rover_launch.py  rover_slam.py
src/rover_description/urdf/: imu.xacro  lidar.xacro  robot_core.xacro  robot_urdf.xacro
src/rover_description_ori/launch/: rover_launch.py
src/rover_description_ori/sllidar_ros2/launch/: sllidar_c1_launch.py
src/rover_description_ori/sllidar_ros2/pippo/: COMMIT_EDITMSG  index
src/rover_description_ori/sllidar_ros2/pippo/logs/refs/remotes/origin/: HEAD
src/sllidar_ros2/launch/: sllidar_c1_launch.py
src/sllidar_ros2/pippo/: FETCH_HEAD
src/sllidar_ros2/pippo/logs/refs/heads/: main
src/sllidar_ros2/pippo/objects/pack/: pack-6a808d2ba782f255ed6e1a3e6980fc25a8e45eac.idx  pack-6a808d2ba782f255ed6e1a3e6980fc25a8e45eac.pack
src/sllidar_ros2/pippo/refs/heads/: main
src/sllidar_ros2/src/: sllidar_node.cpp
