<package format="2">
  <name>motor_pid</name>
  <version>0.0.0</version>
  <description>ROS2 C++ package to drive two DC motors using wheel encoders and publishing /odom</description>

  <maintainer email="guido@dogsally.com">guido</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>pigpio</exec_depend>

  <build_depend>pigpio</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
